istio/space-invaders-v3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: space-inv-istio-v3
  labels:
    app: space-inv-istio
    version: v3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: space-inv-istio
      version: v3
  template:
    metadata:
      labels:
        app: space-inv-istio
        version: v3
    spec:
      containers:
      - name: space-invaders-3
        image: drehnstrom/space-invaders:v3.0
